--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <html>
     <head>
+        <title>Password Generator</title>
+        <link rel="icon" type="image/x-icon" href="favicon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1></h1>
+        <h1>Generate a <br><span id="random">random password</span></h1>
+        <p id="sub-heading">Never use an insecure password again.</p>
+        <button onclick="generatePasswords()">Generate passwords</button>
+        <div class="output">
+            <div class="password" id="password-one"></div>
+            <div class="password" id="password-two"></div>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
