--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div class="container">
         <h1>Generate a <br><span id="random">random password</span></h1>
         <p id="sub-heading">Never use an insecure password again.</p>
         <button onclick="generatePasswords()">Generate passwords</button>
         <div class="output">
             <div class="password" id="password-one"></div>
             <div class="password" id="password-two"></div>
+        </div>
         </div>
         <script src="index.js"></script>
     </body>
